04c16dff33ca0eb9f441342df035a84492e1e6cb Fix: Alignment of header checkbox with DataTables 2.3
Sync to source repo @04c16dff33ca0eb9f441342df035a84492e1e6cb

--- a/css/select.jqueryui.css
+++ b/css/select.jqueryui.css
@@ -8,6 +8,11 @@ table.dataTable > tbody > tr > .dt-select {
 }
 table.dataTable > thead > tr > .dt-select {
   text-align: center;
+  vertical-align: middle;
+}
+table.dataTable > thead > tr > .dt-select input.dt-select-checkbox {
+  margin-left: auto;
+  margin-right: auto;
 }
 table.dataTable input.dt-select-checkbox {
   appearance: none;
